--- a/blogpessoal/src/app/cadastro/cadastro.component.html
+++ b/blogpessoal/src/app/cadastro/cadastro.component.html
@@ -6,28 +6,28 @@
       <form action="">
        <div class="input-field">
            <label>Nome</label>
-           <input class="form-control" type="text" name="username" id="username" placeholder=" Primeiro e último">
+           <input  class="form-control" type="text" name="username" id="username" placeholder=" Primeiro e último" >
        </div>
-       <div class="underline"></div>
+       
     
         <div class="input-field">
-            <label>Email</label>
-            <input class="form-control"  type="text" name="text" id="text" placeholder="Digite o seu email">
+            <label>Usuário</label>
+            <input  class="form-control"  type="text" name="text" id="text" placeholder="Digite o seu email">
         </div>
 
         <div class="input-field">
             <label>Idade</label>
-            <input class="form-control"  type="text" name="text" id="text" placeholder="aaaa-mm-dd">
+            <input  class="form-control"  type="text" name="text" id="text" placeholder="aaaa-mm-dd">
         </div>
        
         <div class="input-field">
             <label>Foto</label>
-            <input class="form-control"  type="text" name="text" id="text" placeholder="Link da sua foto">
+            <input  class="form-control"  type="text" name="text" id="text" placeholder="Link da sua foto">
         </div>
 
         <div class="input-field">
             <label>Senha</label>
-            <input class="form-control"  type="password" name="password" id="password" placeholder="Digite a sua senha">
+            <input  class="form-control"  type="password" name="password" id="password" placeholder="Digite a sua senha">
         </div>
 
         <div class="input-field">
@@ -35,8 +35,20 @@
             <input class="form-control"  type="password" name="confirmsenha" id="password" placeholder="Confirme a sua senha">
         </div>
 
+        <div class="form-group ">
+            <label for="tipo">Tipo de usuário</label>
+            <select name="tipo" id="tipo" class="form-control">
+              <option>Selecione um tipo de usuário:</option>
+              <option value="normal">Padrão</option>
+              <option value="adm">Administrador</option>
+            </select>
+          </div>
+
+    
+
         <div class="underline"></div>
         <input type="submit" value="Cadastrar">
+
 
        <div class="footer">
        <p>Já tem uma conta? <a href="">Faça Login</a></p>
