--- a/blogpessoal/src/app/menu/menu.component.html
+++ b/blogpessoal/src/app/menu/menu.component.html
@@ -7,11 +7,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
           <li class="nav-item">
-              <img src="https://github.com/blendagaspar.png" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+              <img src="{{foto}}" alt="imagem do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
             
           </li>
           <li class="nav-item pl-3">
-              <p class=" m-0 font-weight-bold text-white fs-16 .fontepadrao">Nome do usuário </p>  
+              <p class=" m-0 font-weight-bold text-white fs-16 .fontepadrao">Olá, {{nome}}</p>  
           </li>
           
           <li class="nav-item pl-3 " >
@@ -24,7 +24,7 @@
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0 d-flex align-items-center">
         <li  class="nav-item pl-3">
             
-            <a class="m-0 font-weight-bold text-white fs-16 .fontepadrao"> Sair <i class="fa fa-sign-out text-white" aria-hidden="true"></i></a>
+            <a (click)='sair()'class="m-0 font-weight-bold text-white fs-16 .fontepadrao"> Sair <i class="fa fa-sign-out text-white" aria-hidden="true"></i></a>
            
         </li>
         </ul>
