Crud de tema e postagem completissimo - Aleluia

--- a/blogpessoal/src/app/inicio/inicio.component.html
+++ b/blogpessoal/src/app/inicio/inicio.component.html
@@ -39,7 +39,7 @@
           data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens"
           aria-selected="true">Todas as Postagens</a>
 
-        <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
+        <a (click)='findByIdUsuario()'  class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab"
           href="#minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas
           Postagens</a>
 
@@ -49,25 +49,75 @@
       </div>
     </nav>
 
-    <div class="tab-content" id="nav-tabContent">
+    <div class="tab-content mt-5" id="nav-tabContent">
 
       <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
         aria-labelledby="nav-todasPostagens-tab">
-        Todas as postagens:
+       <!--Inicio Card de todas as postagens -->
+       
+       <div class="card-columns">
+        <div class="card"  style="width: 18rem;" *ngFor='let item of listaPostagens'>
+          <div class="card-body">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{item.usuario.nome}}</h6>
+            <p class="">{{item.tema.descricao}}</p>
+            <p class="card-text">{{item.texto}}</p>
+            <p class="">{{item.data | date: 'dd/MM/yyyy'}}</p> às {{item.data | date: 'HH:mm'}}
+
+          </div>
+        </div>
+      </div>
+     <!--Final Card de todas as postagens -->
+     </div>
+
+      
+     <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">  
+      <!--Inicio Card de minhas  postagens -->
+       
+      <div class="card-columns">
+        <div class="card"  style="width: 18rem;" *ngFor='let item of usuario.postagem'>
+          <div class="card-body">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <p class="">{{item.tema.descricao}}</p>
+            <p class="card-text">{{item.texto}}</p>
+            <p class="">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</p>
+            <button [routerLink]="['/postagem-edit', item.id]" type="button" class="btn btn-outline-success mr-3">Editar</button>
+            <button [routerLink]="['/postagem-delete', item.id]" type="button" class="btn btn-outline-danger">Apagar</button>
+
+          </div>
+        </div>
       </div>
 
-      <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens-tab">
-        Minhas postagens:
+     <!--Final Card de minhas as postagens -->
       </div>
+
+
 
       <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
-        Postagens por tema:
+        
+      <!--Inicio do Card de postagens por tema-->
+      <div class="card-columns " *ngFor='let tema of listaTemas'>
+        <div class="card"  style="width: 18rem;" *ngFor='let item of tema.postagem'>
+          <div class="card-bod">
+            <h5 class="card-title">{{item.titulo}}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{item.usuario.nome}}</h6>
+            <p class="card-text">{{item.texto}}</p>
+            <p class="">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</p>
+            
+
+
+          </div>
+        </div>
+      </div>
+
+       <!--Final do Card de postagens por tema-->
+
       </div>
     </div>
-
-
   </div>
 
+
+  <!--Modal -->
   <div class="modal fade" id="novaPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
   aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
@@ -81,24 +131,24 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="titulo">Titulo</label>
-          <input type="text" class="form-control" name="titulo" id="" placeholder="Digite o titulo">
+          <input [(ngModel)]='postagem.titulo' type="text" class="form-control" name="titulo" id="" placeholder="Digite o titulo">
         </div>
 
         <div class="form-group">
           <label for="texto">Texto</label>
-          <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
+          <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto" rows="3"></textarea>
         </div>
 
         <div class="form-group">
           <label for="tema">Escolha um tema ou <a routerLink='/tema' data-dismiss="modal">cadastre um novo</a>:</label>
-          <select class="form-control" name="tema" id="tema">
-            <option value="">Temas</option>
+          <select class="form-control" name="tema" id="tema" [(ngModel)]='idTema' (change)='findByIdTema'>
+            <option *ngFor= 'let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
           </select>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success" data-dismiss="modal">Publicar</button>
+        <button type="button" class="btn btn-success" data-dismiss="modal" (click)='publicar()'>Publicar</button>
       </div>
     </div>
   </div>
