--- a/blogpessoal/src/app/menu/menu.component.html
+++ b/blogpessoal/src/app/menu/menu.component.html
@@ -15,7 +15,7 @@
           </li>
           
           <li class="nav-item pl-3 " >
-             <a href="">
+             <a [routerLink]="['/usuario-edit' , id]">
                 <p class=" text-white font-weight-bold fs-18 m-0 " ><i class="fa fa-pencil-square-o  " aria-hidden="true"></i></p>
              </a>
          </li>  
